# openapi/openapi-component_provisioner-v1.0.0.yaml
@@ -552,6 +552,11 @@ components:
               description: the workflow job id from AWX to correlate provisioning status with AWX job status updates
               example: "123456"
               nullable: true
+            deletionWorkflowJobId:
+              type: string
+              description: the workflow job id from AWX for the job to delete the component from the cluster
+              example: "123456"
+              nullable: true
             parameters:
               type: array
               description: List of name/value string parameters.
